upgrade do grails 1.1.1, mala zmiana w uploadowanych plikach

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,16 @@
 2) wyświetlanie udziałów dla danego ćwiczenia
   DONE
 3) podkatalog uploads/participation.id dla uploadowanych plików
+  DONE
 4!) powiadomienia mailowe o nowych wiadomościach w udziałach do których się należy
   DONE
 
 5) tomcat: ilf.if.pw.edu.pl:8888
      manager:manager
    mysql: donosiciel:donosiciel@ilf.if.pw.edu.pl:3306
+   
+6) Dla studentów: wyświetlanie wyłącznie udziałów, do których są dodani.
+7) Przy braku autoryzacji/autentyjacji przekierowanie do logowania
+8) Menu z lewej
+9) Edycja profilu (imię, nazwisko itd.)
+10) http://ilf.if.pw.edu.pl/LabFiz2 -- layout
