--- a/TODO.txt
+++ b/TODO.txt
@@ -11,8 +11,12 @@
      manager:manager
    mysql: donosiciel:donosiciel@ilf.if.pw.edu.pl:3306
    
-6) Dla studentów: wyświetlanie wyłącznie udziałów, do których są dodani.
-7) Przy braku autoryzacji/autentyjacji przekierowanie do logowania
+6) Dla studentów: wyświetlanie wyłącznie udziałów, do których są dodani. 
+  DONE
+7) Przy braku autoryzacji/autentyjacji przekierowanie do logowania 
+  DONE
 8) Menu z lewej
+  DONE
 9) Edycja profilu (imię, nazwisko itd.)
 10) http://ilf.if.pw.edu.pl/LabFiz2 -- layout
+  DONE
