--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@
 5) tomcat: ilf.if.pw.edu.pl:8888
      manager:manager
    mysql: donosiciel:donosiciel@ilf.if.pw.edu.pl:3306
+  DONE
    
 6) Dla studentów: wyświetlanie wyłącznie udziałów, do których są dodani. 
   DONE
@@ -17,6 +18,16 @@
   DONE
 8) Menu z lewej
   DONE
-9) Edycja profilu (imię, nazwisko itd.)
 10) http://ilf.if.pw.edu.pl/LabFiz2 -- layout
   DONE
+  
+POZOSTAJĄ:
+9) Edycja profilu (imię, nazwisko itd.)
+11) Heisenbug: przelogowywanie
+12) Upload plików (niedostępne w Tomcacie -- jakby się nie wrzucały)
+13) Sensowniej zrobić filtrowanie udziałów
+
+filtrowanie udziałów:
+- jako teacher: jestem prowadzący
+- jako student: jestem dopisany
+- oddzielać aktywne od nieaktywnych/starych (parametr)
