sensowne filtrowanie udzialow dla Studenta (z uzyciem zlaczenia); do zrobienia filtrowanie udzialow dla nauczyciela oraz Filtry (http://grails.org/doc/1.1.x/guide/single.html#6.6%20Filters)

--- a/TODO.txt
+++ b/TODO.txt
@@ -26,6 +26,7 @@ POZOSTAJĄ:
 11) Heisenbug: przelogowywanie
 12) Upload plików (niedostępne w Tomcacie -- jakby się nie wrzucały)
 13) Sensowniej zrobić filtrowanie udziałów
+  DONE
 
 filtrowanie udziałów:
 - jako teacher: jestem prowadzący
