filtrowanie udzialow: nauczyciele (prowadzacy) takze uwzglednieni; ladniejsze skladanie HQL (prepared query); usuniecie heisenbuga zwiazanego z wypluwaniem errora przy niektorych scenariuszach przelogowywania; stylowanie (strona udzialu)

--- a/TODO.txt
+++ b/TODO.txt
@@ -30,5 +30,7 @@ POZOSTAJĄ:
 
 filtrowanie udziałów:
 - jako teacher: jestem prowadzący
+  DONE
 - jako student: jestem dopisany
+  DONE
 - oddzielać aktywne od nieaktywnych/starych (parametr)
