edycja profilu (imie i nazwisko)

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,12 +23,14 @@
   
 POZOSTAJĄ:
 9) Edycja profilu (imię, nazwisko itd.)
+  DONE (imię i nazwisko)
 11) Heisenbug: przelogowywanie
   DONE
 12) Upload plików (niedostępne w Tomcacie -- jakby się nie wrzucały)
 13) Sensowniej zrobić filtrowanie udziałów
   DONE
 14) Layout: dół strony
+  DONE
 
 filtrowanie udziałów:
 - jako teacher: jestem prowadzący
